--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
           command: npm run build-sass
       - run:
           name: Build hugo
-          command: hugo --baseURL "http://s.docs.monaca.io/"
+          command: hugo --baseURL "https://docs.monaca.io/"
       - save_cache:
           key: docs-{{ epoch }}
           paths:
