Fixed remaing 404 pages & redirect issues for older Core Cordova plugin (JP version0

--- a/config.toml
+++ b/config.toml
@@ -3,6 +3,8 @@ baseURL = "http://docs.monaca.io/"
 title = "Monaca Docs"
 theme = "monaca"
 
+disablePathToLower = true 
+
 defaultContentLanguage = "en"
 defaultContentLanguageInSubdir = true
 
