--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "watch-sass": "npm run build-sass && npm run build-sass -- -w"
   },
   "dependencies": {
-    "node-sass": "^4.7.2"
+    "node-sass": "^4.7.2",
+    "npm": "^5.7.1",
+    "update": "^0.7.4"
   }
 }
