Change hugo install command

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
       - checkout
       - run:
           name: Install hugo
-          command: go get -v github.com/gohugoio/hugo 
+          command: sudo apt-get update && sudo apt-get install hugo
       - run:
           name: Install pip
           command: pip install --upgrade pip
