--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,19 +1,22 @@
 version: 2
 jobs:
   build:
-    machine: true
+    docker:
+      - image: cibuilds/hugo:0.44
     working_directory: ~/project
     steps:
+      # install git
+      - run: apk update && apk add git
+      # checkout the repository
       - checkout
       - run:
-          name: Install hugo
-          command: sudo apt-get update && sudo apt-get install hugo
+          name: install AWS CLI (first install pip, the Python package manager)
+          command: |
+            apk add --update python python-dev py-pip build-base
+            pip install awscli
       - run:
-          name: Install pip
-          command: pip install --upgrade pip
-      - run: 
-          name: install AWS CLI
-          command: pip install awscli --upgrade --user
+          name: Install node 
+          command: apk add --update nodejs nodejs-npm
       - run: 
           name: Install NPM dependency
           command: npm install
